// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthService loginWithGoogle should create a new user when user does not exist 1`] = `
{
  "accountDeactivated": false,
  "accountType": "google",
  "createdAt": Any<Date>,
  "defaultMessage": null,
  "desktopNotifsEnabled": false,
  "email": "mocked_email@example.com",
  "emailVerified": true,
  "firstName": "John",
  "hideInsights": null,
  "id": 1,
  "includeDefaultMessage": true,
  "lastName": "Doe",
  "name": "John Doe",
  "organizationUser": OrganizationUserModel {
    "createdAt": 2026-01-20T00:28:13.128Z,
    "id": 1,
    "organizationId": 2,
    "role": "member",
    "userId": 1,
  },
  "password": null,
  "photoURL": "mocked_picture_url",
  "readChangeLog": false,
  "sid": null,
  "userRole": "user",
}
`;

exports[`AuthService loginWithShibboleth should create a new user when user does not exist 1`] = `
{
  "accountDeactivated": false,
  "accountType": "shibboleth",
  "createdAt": Any<Date>,
  "defaultMessage": null,
  "desktopNotifsEnabled": false,
  "email": "mocked_email@example.com",
  "emailVerified": true,
  "firstName": "John",
  "hideInsights": null,
  "id": 1,
  "includeDefaultMessage": true,
  "lastName": "Doe",
  "name": "John Doe",
  "organizationUser": {
    "createdAt": Any<Date>,
    "id": 1,
    "organizationId": 2,
    "role": "member",
    "userId": 1,
  },
  "password": null,
  "photoURL": null,
  "readChangeLog": false,
  "sid": null,
  "userRole": "user",
}
`;
